# humility

./: .gitattributes  .gitignore  .gitmodules  .licenserc.yaml  .rustfmt.toml  Cargo.toml  DEVELOPING.mkdn  README.md  README.md.in  build.rs  flake.nix  hngborhunlmpqg3ihsrb3jg5laahulf3.darc  manifest  prnvo0tpkqbremnbjb6jemr81jhqrcnd  pslp0tfamchkad5lqhdu2fqun9gmtshf  rust-toolchain.toml  twaddle.sh
.cargo/: config.toml
cmd/apml21/: Cargo.toml
cmd/apml21/src/: lib.rs
cmd/apptable/: Cargo.toml
cmd/apptable/src/: lib.rs
cmd/attest/: Cargo.toml
cmd/attest/src/: lib.rs
cmd/auxflash/: Cargo.toml
cmd/auxflash/src/: lib.rs
cmd/bankerase/: Cargo.toml
cmd/bankerase/src/: lib.rs
cmd/break/: Cargo.toml
cmd/break/src/: lib.rs
cmd/caboose/: Cargo.toml
cmd/caboose/src/: lib.rs
cmd/console-proxy/: Cargo.toml
cmd/console-proxy/src/: lib.rs  posix.rs
cmd/console-proxy/src/posix/: picocom_map.rs
cmd/cosmo/: Cargo.toml
cmd/cosmo/src/: lib.rs
cmd/counters/: Cargo.toml
cmd/counters/src/: ipc.rs  lib.rs
cmd/dashboard/: Cargo.toml
cmd/dashboard/src/: lib.rs
cmd/debugmailbox/: Cargo.toml
cmd/debugmailbox/src/: lib.rs
humility-arch-cortex/: Cargo.toml
humility-arch-cortex/src/: debug.rs  dwt.rs  etm.rs  itm.rs  lib.rs  scs.rs  swo.rs  tpiu.rs
humility-bin/: Cargo.toml  build.rs
humility-bin/src/: cmd.rs  cmd_repl.rs  main.rs
humility-bin/tests/: README.md  cli_tests.rs
humility-bin/tests/cmd/: chip.trycmd  ip.trycmd  nosubcommand.trycmd  rencm.toml  version.trycmd
humility-bin/tests/cmd/cores/: hubris.core.chilly.0  hubris.core.kernel-panic.0  hubris.core.kiowa.10  hubris.core.kiowa.12  hubris.core.kiowa.15  hubris.core.kiowa.2  hubris.core.kiowa.22  hubris.core.kiowa.24  hubris.core.kiowa.26  hubris.core.kiowa.27  hubris.core.kiowa.28  hubris.core.kiowa.29  hubris.core.kiowa.4  hubris.core.kiowa.51  hubris.core.kiowa.6  hubris.core.kiowa.7  hubris.core.kiowa.8  hubris.core.kiowa.9  hubris.core.kiowa.rick.0  hubris.core.kiowa.stm32h743-nucleo.0  hubris.core.new-compiler  hubris.core.ouray.1  hubris.core.ouray.10  hubris.core.ouray.12  hubris.core.ouray.16  hubris.core.ouray.20  hubris.core.ouray.23  hubris.core.ouray.24  hubris.core.ouray.25  hubris.core.ouray.27  hubris.core.ouray.30  hubris.core.ouray.33  hubris.core.ouray.34.fails  hubris.core.ouray.38  hubris.core.ouray.41  hubris.core.ouray.42  hubris.core.ouray.43  hubris.core.ouray.45  hubris.core.ouray.46  hubris.core.ouray.48  (+17 more)
humility-bin/tests/cmd/counters-arg/: counters-arg.control_plane_agent.overflow.0.stdout  counters-arg.cosmo.toml  counters-arg.counters.0.stdout  counters-arg.duplicate_HostFlash_hash_REPLY.toml  counters-arg.gimlet.stdout  counters-arg.gimlet.toml  counters-arg.host-panic.1.stdout  counters-arg.host-panic.2.toml  counters-arg.host-panic.4.toml  counters-arg.in_bootloader.0.toml  counters-arg.ipc-counts.0.toml  counters-arg.kiowa.10.toml  counters-arg.kiowa.12.toml  counters-arg.kiowa.13.toml  counters-arg.kiowa.14.toml  counters-arg.kiowa.20.toml  counters-arg.kiowa.23.toml  counters-arg.kiowa.27.toml  counters-arg.kiowa.29.toml  counters-arg.kiowa.30.toml  counters-arg.kiowa.31.toml  counters-arg.kiowa.4.toml  counters-arg.kiowa.52.toml  counters-arg.kiowa.6.toml  counters-arg.kiowa.7.toml  counters-arg.kiowa.9.toml  counters-arg.kiowa.rick.0.toml  counters-arg.kiowa.stm32h743-nucleo.0.toml  counters-arg.new-compiler.stderr  counters-arg.new-compiler.toml  counters-arg.new-sensors.toml  counters-arg.ouray.11.toml  counters-arg.ouray.13.toml  counters-arg.ouray.14.toml  counters-arg.ouray.16.toml  counters-arg.ouray.17.toml  counters-arg.ouray.21.toml  counters-arg.ouray.3.toml  counters-arg.ouray.30.toml  counters-arg.ouray.31.fails.toml  (+19 more)
humility-bin/tests/cmd/counters-csv-full/: counters-csv-full.chilly.0.toml  counters-csv-full.control_plane_agent.overflow.0.stdout  counters-csv-full.cosmo.stdout  (+61 more)
humility-caboose/: Cargo.toml
humility-caboose/src/: lib.rs
humility-cli/: Cargo.toml
humility-cli/src/: env.rs  lib.rs
humility-cmd/: Cargo.toml
humility-cmd/src/: doppel.rs  env.rs  hiffy.rs  i2c.rs  idol.rs  jefe.rs  lib.rs  reflect.rs  stack.rs  test.rs
humility-core/: Cargo.toml
humility-core/src/: arch.rs  arch_arm.rs  arch_rv.rs  archive.rs  cli.rs  core.rs  debug.rs  dump.rs  env.rs  hubris.rs  lib.rs  mem.rs  net.rs  reflect.rs
humility-doppel/: Cargo.toml
humility-doppel/src/: lib.rs
humility-dump/: Cargo.toml
humility-dump-agent/: Cargo.toml
humility-dump-agent/src/: hiffy.rs  lib.rs  udp.rs
humility-dump/examples/: system_net_dump.rs
humility-dump/src/: lib.rs
humility-flash/: Cargo.toml
humility-flash/src/: lib.rs
humility-hif-assembler/: Cargo.toml  README.md
humility-hif-assembler/examples/: bus-scan.hif  equivalent-gpio-input.hif  equivalent-gpio-toggle.hif  equivalent-hash-digest.hif  equivalent-i2c-read.hif  equivalent-i2c-regscan.hif  equivalent-i2c-scan.hif  equivalent-idol-sensor-get.hif  equivalent-qspi-read-id.hif  equivalent-qspi-read-status.hif  equivalent-validate-i2c.hif  idol-sensor-poll.hif  multi-bus-interleave.hif  register-dump.hif  stress-multi-device.hif  stress-mux-switching.hif  stress-single-device.hif  stress-with-sleep.hif  write-read-verify.hif
humility-hif-assembler/fixtures/: README  cosmo-b.json  gimlet-c.json  grapefruit.json  sidecar-b.json
humility-hif-assembler/src/: archive.rs  assembler.rs  builder.rs  bundle.rs  error.rs  lib.rs  listing.rs  lower.rs  parser.rs  stats.rs  types.rs
humility-hif-assembler/tests/: archive_integration.rs  equivalent_tests.rs  fixture_tests.rs
humility-hiffy/: Cargo.toml
humility-hiffy/examples/: sequencer.rs
humility-hiffy/src/: lib.rs
humility-net/: Cargo.toml
humility-net-core/: Cargo.toml
humility-net-core/src/: lib.rs
humility-net/src/: lib.rs
humility-probes-core/: Cargo.toml
humility-probes-core/src/: gdb.rs  lib.rs  openocd.rs  probe_rs.rs  unattached.rs
humility-spd/: Cargo.toml
humility-spd/src/: lib.rs
humility-vpd-lib/: Cargo.toml
humility-vpd-lib/examples/: list.rs  read.rs
humility-vpd-lib/src/: lib.rs
(+7061 files in other folders)
