# Looking to bump the humility version? Check `humility-bin`
#

[workspace]
members = [
    "humility-arch-arm",
    "humility-arch-cortex",
    "humility-bin",
    "humility-cmd",
    "humility-cli",
    "humility-core",
    "humility-doppel",
    "humility-dump-agent",
    "humility-hiffy",
    "humility-i2c",
    "humility-idol",
    "humility-jefe",
    "humility-log",
    "humility-net-core",
    "humility-pmbus",
    "humility-stack",
    "humility-probes-core",
    "cmd/apptable",
    "cmd/auxflash",
    "cmd/bankerase",
    "cmd/console-proxy",
    "cmd/counters",
    "cmd/dashboard",
    "cmd/debugmailbox",
    "cmd/diagnose",
    "cmd/doc",
    "cmd/dump",
    "cmd/tofino-eeprom",
    "cmd/exec",
    "cmd/extract",
    "cmd/flash",
    "cmd/gdb",
    "cmd/gimlet",
    "cmd/gpio",
    "cmd/hash",
    "cmd/hiffy",
    "cmd/host",
    "cmd/hydrate",
    "cmd/rpc",
    "cmd/i2c",
    "cmd/ibc",
    "cmd/jefe",
    "cmd/lpc55gpio",
    "cmd/lsusb",
    "cmd/manifest",
    "cmd/map",
    "cmd/monorail",
    "cmd/mwocp",
    "cmd/net",
    "cmd/openocd",
    "cmd/pmbus",
    "cmd/power",
    "cmd/probe",
    "cmd/qspi",
    "cmd/readmem",
    "cmd/readvar",
    "cmd/rebootleby",
    "cmd/registers",
    "cmd/reset",
    "cmd/rencm",
    "cmd/rendmp",
    "cmd/repl",
    "cmd/ringbuf",
    "cmd/sensors",
    "cmd/spctrl",
    "cmd/spd",
    "cmd/spi",
    "cmd/stackmargin",
    "cmd/stmsecure",
    "cmd/tasks",
    "cmd/test",
    "cmd/validate",
    "cmd/vpd",
    "cmd/writeword",
    "xtask",
]
resolver = "2"

[workspace.dependencies]
# `git`-based deps
gimlet-inspector-protocol = { git = "https://github.com/oxidecomputer/gimlet-inspector-protocol" }
hif = { git = "https://github.com/oxidecomputer/hif" }
humpty = { git = "https://github.com/oxidecomputer/humpty", version = "0.1.3" }
idol = {git = "https://github.com/oxidecomputer/idolatry.git"}
idt8a3xxxx = { git = "https://github.com/oxidecomputer/idt8a3xxxx" }
pmbus = { git = "https://github.com/oxidecomputer/pmbus" }
spd = { git = "https://github.com/oxidecomputer/spd" }
serialport = { git = "https://github.com/jgallagher/serialport-rs", branch = "illumos-support" }
tlvc = { git = "https://github.com/oxidecomputer/tlvc" }
tlvc-text = {git = "https://github.com/oxidecomputer/tlvc"}
vsc7448-info = { git = "https://github.com/oxidecomputer/vsc7448.git" }
vsc7448-types = { git = "https://github.com/oxidecomputer/vsc7448.git" }
ipcc-data = { git = "https://github.com/oxidecomputer/ipcc-rs" }

#
# We depend on the oxide-stable branch of Oxide's fork of probe-rs to assure
# that we can float necessary patches on probe-rs.
#
probe-rs = { git = "https://github.com/oxidecomputer/probe-rs.git", branch = "oxide-v0.12.0" }

#
# We need the fix for https://github.com/capstone-rust/capstone-rs/issues/84,
# which upstream seems uninterested in fixing.
#
capstone = {git = "https://github.com/oxidecomputer/capstone-rs.git"}

# Local `path`-based deps
humility = { path = "./humility-core", package = "humility-core" }
humility-arch-arm = { path = "./humility-arch-arm" }
humility-cortex = { path = "./humility-arch-cortex" }
humility-cmd = { path = "./humility-cmd", default-features = false }
humility-cli = { path = "./humility-cli" }
humility-dump-agent = { path = "./humility-dump-agent" }
humility-doppel = { path = "./humility-doppel" }
humility-hiffy = { path = "./humility-hiffy" }
humility-i2c = { path = "./humility-i2c" }
humility-idol = { path = "./humility-idol" }
humility-jefe = { path = "./humility-jefe" }
humility_load_derive = { path = "./load_derive" }
humility-log = { path = "./humility-log" }
humility-net-core = { path = "./humility-net-core" }
humility-pmbus = { path = "./humility-pmbus" }
humility-probes-core = { path = "./humility-probes-core" }
humility-stack = { path = "./humility-stack" }
cmd-apptable = { path = "./cmd/apptable", package = "humility-cmd-apptable" }
cmd-auxflash = { path = "./cmd/auxflash", package = "humility-cmd-auxflash" }
cmd-bankerase = { path = "./cmd/bankerase", package = "humility-cmd-bankerase" }
cmd-console-proxy = { path = "./cmd/console-proxy", package = "humility-cmd-console-proxy" }
cmd-counters = { path = "./cmd/counters", package = "humility-cmd-counters" }
cmd-dashboard = { path = "./cmd/dashboard", package = "humility-cmd-dashboard" }
cmd-diagnose = { path = "./cmd/diagnose", package = "humility-cmd-diagnose" }
cmd-debugmailbox = { path = "./cmd/debugmailbox", package = "humility-cmd-debugmailbox" }
cmd-doc = { path = "./cmd/doc", package = "humility-cmd-doc" }
cmd-dump = { path = "./cmd/dump", package = "humility-cmd-dump" }
cmd-tofino-eeprom = { path = "./cmd/tofino-eeprom", package = "humility-cmd-tofino-eeprom" }
cmd-exec = { path = "./cmd/exec", package = "humility-cmd-exec" }
cmd-extract = { path = "./cmd/extract", package = "humility-cmd-extract" }
cmd-flash = { path = "./cmd/flash", package = "humility-cmd-flash" }
cmd-gdb = { path = "./cmd/gdb", package = "humility-cmd-gdb" }
cmd-gimlet = { path = "./cmd/gimlet", package = "humility-cmd-gimlet" }
cmd-gpio = { path = "./cmd/gpio", package = "humility-cmd-gpio" }
cmd-hash = { path = "./cmd/hash", package = "humility-cmd-hash" }
cmd-hiffy = { path = "./cmd/hiffy", package = "humility-cmd-hiffy" }
cmd-host = { path = "./cmd/host", package = "humility-cmd-host" }
cmd-hydrate = { path = "./cmd/hydrate", package = "humility-cmd-hydrate" }
cmd-i2c = { path = "./cmd/i2c", package = "humility-cmd-i2c" }
cmd-ibc = { path = "./cmd/ibc", package = "humility-cmd-ibc" }
cmd-jefe = { path = "./cmd/jefe", package = "humility-cmd-jefe" }
cmd-lpc55gpio = { path = "./cmd/lpc55gpio", package = "humility-cmd-lpc55gpio" }
cmd-lsusb = { path = "./cmd/lsusb", package = "humility-cmd-lsusb" }
cmd-manifest = { path = "./cmd/manifest", package = "humility-cmd-manifest" }
cmd-map = { path = "./cmd/map", package = "humility-cmd-map" }
cmd-monorail = { path = "./cmd/monorail", package = "humility-cmd-monorail" }
cmd-mwocp = { path = "./cmd/mwocp", package = "humility-cmd-mwocp" }
cmd-net = { path = "./cmd/net", package = "humility-cmd-net" }
cmd-openocd = { path = "./cmd/openocd", package = "humility-cmd-openocd" }
cmd-pmbus = { path = "./cmd/pmbus", package = "humility-cmd-pmbus" }
cmd-power = { path = "./cmd/power", package = "humility-cmd-power" }
cmd-powershelf = { path = "./cmd/powershelf", package = "humility-cmd-powershelf" }
cmd-probe = { path = "./cmd/probe", package = "humility-cmd-probe" }
cmd-qspi = { path = "./cmd/qspi", package = "humility-cmd-qspi" }
cmd-readmem = { path = "./cmd/readmem", package = "humility-cmd-readmem" }
cmd-readvar = { path = "./cmd/readvar", package = "humility-cmd-readvar" }
cmd-rebootleby = { path = "./cmd/rebootleby", package = "humility-cmd-rebootleby" }
cmd-registers = { path = "./cmd/registers", package = "humility-cmd-registers" }
cmd-reset = { path = "./cmd/reset", package = "humility-cmd-reset" }
cmd-rencm = { path = "./cmd/rencm", package = "humility-cmd-rencm" }
cmd-rendmp = { path = "./cmd/rendmp", package = "humility-cmd-rendmp" }
cmd-ringbuf = { path = "./cmd/ringbuf", package = "humility-cmd-ringbuf" }
cmd-rpc = { path = "./cmd/rpc", package = "humility-cmd-rpc" }
cmd-sbrmi = { path = "./cmd/sbrmi", package = "humility-cmd-sbrmi" }
cmd-sensors = { path = "./cmd/sensors", package = "humility-cmd-sensors" }
cmd-spctrl = { path = "./cmd/spctrl", package = "humility-cmd-spctrl" }
cmd-spd = { path = "./cmd/spd", package = "humility-cmd-spd" }
cmd-spi = { path = "./cmd/spi", package = "humility-cmd-spi" }
cmd-stackmargin = { path = "./cmd/stackmargin", package = "humility-cmd-stackmargin" }
cmd-stmsecure = { path = "./cmd/stmsecure", package = "humility-cmd-stmsecure" }
cmd-tasks = { path = "./cmd/tasks", package = "humility-cmd-tasks" }
cmd-test = { path = "./cmd/test", package = "humility-cmd-test" }
cmd-validate = { path = "./cmd/validate", package = "humility-cmd-validate" }
cmd-vpd = { path = "./cmd/vpd", package = "humility-cmd-vpd" }
cmd-writeword = { path = "./cmd/writeword", package = "humility-cmd-writeword" }

# crates.io deps
anyhow = { version = "1.0.44", features = ["backtrace"] }
atty = "0.2"
bitfield = "0.13.2"
byteorder = "1.3.4"
cargo_metadata = "0.12.0"
cargo-readme = "3.3.1"
chrono = "0.4.38"
clap = { version = "3.0.12", features = ["derive", "env"] }
colored = "2.0.0"
crc-any = "2.3.5"
crossbeam-channel = "0.5.6"
crossterm = "0.20.0"
csv = "1.1.3"
ctrlc = "3.1.5"
env_logger = "0.9.0"
fallible-iterator = "0.2.0"
gimli = "0.22.0"
goblin = "0.2"
hubpack = "0.1.1"
ihex = "3.0"
indexmap = { version = "1.7", features = ["serde-1"] }
indicatif = "0.15"
itertools = "0.10.1"
jep106 = "0.2"
lazy_static = "1.4.0"
libc = "0.2"
log = {version = "0.4.8", features = ["std"]}
lzss = "0.8"
multimap = "0.8.1"
num-derive = "0.4"
num-traits = "0.2"
parse-size = { version = "1.0", features = ["std"]}
parse_int = "0.4.0"
paste = "0.1"
path-slash = "0.1.4"
postcard = "0.7.0"
pretty-hex = "0.4"
proc-macro2 = "1.0"
quote = "1.0"
rand = "0.8"
ratatui = "0.23.0"
raw-cpuid = { version = "11.0.0", features = ["display"] }
rayon = "1.7"
reedline = "0.11.0"
regex = "1.5.5"
ron = "0.7"
rusb = "0.8.1"
rustc-demangle = "0.1.21"
scroll = "0.10"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0"
serde-xml-rs = "0.5.1"
sha2 = "0.10.1"
splitty = "0.1.0"
srec = "0.2"
strum = "0.22"
strum_macros = "0.22"
syn = "1.0"
tempfile = "3.3"
termimad = "0.21"
termios = "0.3" # not usable on windows!
thiserror = "1.0"
toml = "0.5"
trycmd = "0.13.2"
winapi = "0.3.9"
zerocopy = "0.6.1"
zip = "0.6.4"

[profile.release]
debug = true

[profile.ci]
inherits = "release"
debug = false
debug-assertions = true

[patch.crates-io]
libusb1-sys = { git = "https://github.com/oxidecomputer/rusb", branch = "probe-rs-0.12-libusb-v1.0.26" }
hidapi = { git = "https://github.com/oxidecomputer/hidapi-rs", branch = "oxide-stable" }
