# Looking to bump the humility version? Check `humility-bin`
#

[workspace]
default-members = ["humility-bin"]
members = [
    "humility-arch-arm",
    "humility-arch-cortex",
    "humility-auxflash",
    "humility-bin",
    "humility-caboose",
    "humility-cli",
    "humility-core",
    "humility-doppel",
    "humility-dump-agent",
    "humility-hexdump",
    "humility-hiffy",
    "humility-i2c",
    "humility-idol",
    "humility-jefe",
    "humility-log",
    "humility-net-core",
    "humility-pmbus",
    "humility-probes-core",
    "humility-spd",
    "humility-stack",
    "humility-validate",
    "humility-vpd-lib",
    "cmd/auxflash",
    "cmd/caboose",
    "cmd/console-proxy",
    "cmd/counters",
    "cmd/dashboard",
    "cmd/debugmailbox",
    "cmd/diagnose",
    "cmd/doc",
    "cmd/dump",
    "cmd/tofino-eeprom",
    "cmd/discover",
    "cmd/ereport",
    "cmd/exec",
    "cmd/extract",
    "cmd/flash",
    "cmd/gimlet",
    "cmd/gpio",
    "cmd/hash",
    "cmd/hiffy",
    "cmd/host",
    "cmd/hydrate",
    "cmd/i2c",
    "cmd/ibc",
    "cmd/jefe",
    "cmd/lpc55gpio",
    "cmd/lsusb",
    "cmd/manifest",
    "cmd/map",
    "cmd/monorail",
    "cmd/mwocp",
    "cmd/net",
    "cmd/pmbus",
    "cmd/power",
    "cmd/probe",
    "cmd/qspi",
    "cmd/readmem",
    "cmd/readvar",
    "cmd/rebootleby",
    "cmd/registers",
    "cmd/reset",
    "cmd/rencm",
    "cmd/rendmp",
    "cmd/ringbuf",
    "cmd/sensors",
    "cmd/spctrl",
    "cmd/spd",
    "cmd/spi",
    "cmd/stackmargin",
    "cmd/stmsecure",
    "cmd/tasks",
    "cmd/test",
    "cmd/validate",
    "cmd/vpd",
    "cmd/writeword",
    "xtask", "humility-log",
]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.91" # if this changes, edit ci.yaml as well!

[workspace.dependencies]
# `git`-based deps
gimlet-inspector-protocol = { git = "https://github.com/oxidecomputer/gimlet-inspector-protocol" }
hif = { git = "https://github.com/oxidecomputer/hif" }
hubtools = { git = "https://github.com/oxidecomputer/hubtools.git" }
humpty = { git = "https://github.com/oxidecomputer/humpty", version = "0.1.5" }
idol = { git = "https://github.com/oxidecomputer/idolatry.git" }
idt8a3xxxx = { git = "https://github.com/oxidecomputer/idt8a3xxxx" }
ipcc-data = { git = "https://github.com/oxidecomputer/ipcc-rs" }
measurement-token = { git = "https://github.com/oxidecomputer/lpc55_support", default-features = false }
pmbus = { git = "https://github.com/oxidecomputer/pmbus" }
serialport = { git = "https://github.com/jgallagher/serialport-rs", branch = "illumos-support" }
spd = { git = "https://github.com/oxidecomputer/spd" }
tlvc = { git = "https://github.com/oxidecomputer/tlvc", version = "0.4.1" }
tlvc-text = { git = "https://github.com/oxidecomputer/tlvc", version = "0.4.0" }
turin-post-decoder = { git = "https://github.com/oxidecomputer/turin-post-decoder" }
vsc7448-info = { git = "https://github.com/oxidecomputer/vsc7448.git" }
vsc7448-types = { git = "https://github.com/oxidecomputer/vsc7448.git" }
# This will ideally be merged soon
nusb = { git = "https://github.com/oxidecomputer/nusb.git", branch = "add_illumos" }

#
# We depend on the oxide-stable branch of Oxide's fork of probe-rs to assure
# that we can float necessary patches on probe-rs.
#
# As of this commit the patches are pretty minimal: an updated nusb branch
# with illumos support and some tweaks to avoid the need to pull in
# serialport. The dream would still be to run a regular probe-rs release.
#
# We also still require CMSIS DAP V1 (HID based) because not all probes are
# updated to firmware that works with CMSIS DAP V2. probe-rs is smart enough
# to try CMSIS DAP v2 if it can so we should only be using HID as a last
# resort. It would still be really nice to eventually drop that feature so
# we don't have to keep using our hidapi-rs fork for illumos fixes.
probe-rs = { git = "https://github.com/oxidecomputer/probe-rs.git", branch = "oxide_v0.31.0", default-features = false, features = ["builtin-targets", "cmsisdap_v1"] }

# Local `path`-based deps
humility = { path = "./humility-core", package = "humility-core" }
humility-arch-arm = { path = "./humility-arch-arm" }
humility-auxflash = { path = "./humility-auxflash" }
humility-cortex = { path = "./humility-arch-cortex" }
humility-caboose = { path = "./humility-caboose" }
humility-cli = { path = "./humility-cli", default-features = false }
humility-doppel = { path = "./humility-doppel" }
humility-dump-agent = { path = "./humility-dump-agent" }
humility-hexdump = { path = "./humility-hexdump" }
humility-hiffy = { path = "./humility-hiffy" }
humility-i2c = { path = "./humility-i2c" }
humility-idol = { path = "./humility-idol" }
humility-jefe = { path = "./humility-jefe" }
humility-log = { path = "./humility-log" }
humility_load_derive = { path = "./load_derive" }
humility-net-core = { path = "./humility-net-core" }
humility-pmbus = { path = "./humility-pmbus" }
humility-probes-core = { path = "./humility-probes-core" }
humility-spd = { path = "./humility-spd" }
humility-stack = { path = "./humility-stack" }
humility-validate = { path = "./humility-validate" }
humility-vpd-lib = { path = "./humility-vpd-lib" }
cmd-auxflash = { path = "./cmd/auxflash", package = "humility-cmd-auxflash" }
cmd-caboose = { path = "./cmd/caboose", package = "humility-cmd-caboose" }
cmd-console-proxy = { path = "./cmd/console-proxy", package = "humility-cmd-console-proxy" }
cmd-counters = { path = "./cmd/counters", package = "humility-cmd-counters" }
cmd-dashboard = { path = "./cmd/dashboard", package = "humility-cmd-dashboard" }
cmd-diagnose = { path = "./cmd/diagnose", package = "humility-cmd-diagnose" }
cmd-debugmailbox = { path = "./cmd/debugmailbox", package = "humility-cmd-debugmailbox" }
cmd-discover = { path = "./cmd/discover", package = "humility-cmd-discover" }
cmd-doc = { path = "./cmd/doc", package = "humility-cmd-doc" }
cmd-dump = { path = "./cmd/dump", package = "humility-cmd-dump" }
cmd-tofino-eeprom = { path = "./cmd/tofino-eeprom", package = "humility-cmd-tofino-eeprom" }
cmd-ereport = { path = "./cmd/ereport", package = "humility-cmd-ereport" }
cmd-exec = { path = "./cmd/exec", package = "humility-cmd-exec" }
cmd-extract = { path = "./cmd/extract", package = "humility-cmd-extract" }
cmd-flash = { path = "./cmd/flash", package = "humility-cmd-flash" }
cmd-gimlet = { path = "./cmd/gimlet", package = "humility-cmd-gimlet" }
cmd-gpio = { path = "./cmd/gpio", package = "humility-cmd-gpio" }
cmd-hash = { path = "./cmd/hash", package = "humility-cmd-hash" }
cmd-hiffy = { path = "./cmd/hiffy", package = "humility-cmd-hiffy" }
cmd-host = { path = "./cmd/host", package = "humility-cmd-host" }
cmd-hydrate = { path = "./cmd/hydrate", package = "humility-cmd-hydrate" }
cmd-i2c = { path = "./cmd/i2c", package = "humility-cmd-i2c" }
cmd-ibc = { path = "./cmd/ibc", package = "humility-cmd-ibc" }
cmd-jefe = { path = "./cmd/jefe", package = "humility-cmd-jefe" }
cmd-lpc55gpio = { path = "./cmd/lpc55gpio", package = "humility-cmd-lpc55gpio" }
cmd-lsusb = { path = "./cmd/lsusb", package = "humility-cmd-lsusb" }
cmd-manifest = { path = "./cmd/manifest", package = "humility-cmd-manifest" }
cmd-map = { path = "./cmd/map", package = "humility-cmd-map" }
cmd-monorail = { path = "./cmd/monorail", package = "humility-cmd-monorail" }
cmd-mwocp = { path = "./cmd/mwocp", package = "humility-cmd-mwocp" }
cmd-net = { path = "./cmd/net", package = "humility-cmd-net" }
cmd-pmbus = { path = "./cmd/pmbus", package = "humility-cmd-pmbus" }
cmd-power = { path = "./cmd/power", package = "humility-cmd-power" }
cmd-powershelf = { path = "./cmd/powershelf", package = "humility-cmd-powershelf" }
cmd-probe = { path = "./cmd/probe", package = "humility-cmd-probe" }
cmd-qspi = { path = "./cmd/qspi", package = "humility-cmd-qspi" }
cmd-readmem = { path = "./cmd/readmem", package = "humility-cmd-readmem" }
cmd-readvar = { path = "./cmd/readvar", package = "humility-cmd-readvar" }
cmd-rebootleby = { path = "./cmd/rebootleby", package = "humility-cmd-rebootleby" }
cmd-registers = { path = "./cmd/registers", package = "humility-cmd-registers" }
cmd-reset = { path = "./cmd/reset", package = "humility-cmd-reset" }
cmd-rencm = { path = "./cmd/rencm", package = "humility-cmd-rencm" }
cmd-rendmp = { path = "./cmd/rendmp", package = "humility-cmd-rendmp" }
cmd-ringbuf = { path = "./cmd/ringbuf", package = "humility-cmd-ringbuf" }
cmd-sbrmi = { path = "./cmd/sbrmi", package = "humility-cmd-sbrmi" }
cmd-sensors = { path = "./cmd/sensors", package = "humility-cmd-sensors" }
cmd-spctrl = { path = "./cmd/spctrl", package = "humility-cmd-spctrl" }
cmd-spd = { path = "./cmd/spd", package = "humility-cmd-spd" }
cmd-spi = { path = "./cmd/spi", package = "humility-cmd-spi" }
cmd-stackmargin = { path = "./cmd/stackmargin", package = "humility-cmd-stackmargin" }
cmd-stmsecure = { path = "./cmd/stmsecure", package = "humility-cmd-stmsecure" }
cmd-tasks = { path = "./cmd/tasks", package = "humility-cmd-tasks" }
cmd-test = { path = "./cmd/test", package = "humility-cmd-test" }
cmd-validate = { path = "./cmd/validate", package = "humility-cmd-validate" }
cmd-vpd = { path = "./cmd/vpd", package = "humility-cmd-vpd" }
cmd-writeword = { path = "./cmd/writeword", package = "humility-cmd-writeword" }

# crates.io deps
addr2line = "0.26"
anyhow = { version = "1.0.44", features = ["backtrace"] }
auto_impl = "1.3.0"
bitfield = "0.19.4"
byteorder = "1.3.4"
capstone = "0.14.0"
cargo-readme = "3.3.1"
cargo_metadata = "0.23.1"
chrono = "0.4.38"
ciborium = "0.2.2"
clap = { version = "4", features = ["derive", "env"] }
colored = "3.1.1"
crc-any = "2.3.5"
crossbeam-channel = "0.5.6"
crossterm = "0.29.0"
csv = "1.1.3"
ctrlc = "3.1.5"
env_logger = "0.11.10"
gimli = "0.33.0"
goblin = "0.10"
heck = "0.5"
hex = "0.4.3"
hubpack = "0.1.1"
indexmap = { version = "2.14.0", features = ["serde"] }
indicatif = "0.18"
itertools = "0.14.0"
jep106 = "0.3"
lazy_static = "1.4.0"
libc = "0.2"
lzss = "0.9"
multimap = "0.10.1"
num-derive = "0.4"
num-traits = "0.2"
parse-size = { version = "1.0", features = ["std"]}
parse_int = "0.9.0"
paste = "1.0.15"
postcard = "0.7.0"
pretty-hex = "0.4"
proc-macro2 = "1.0"
quote = "1.0"
rand = "0.10"
ratatui = "0.30.0"
raw-cpuid = { version = "11.0.0", features = ["display"] }
rayon = "1.7"
regex = "1.5.5"
ron = "0.12"
rustc-demangle = "0.1.21"
scroll = "0.13"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
serde-xml-rs = "0.8.2"
sha2 = "0.11.0"
slog = "2.8.2"
splitty = "1.0.2"
strum = "0.28"
strum_macros = "0.28"
syn = "2.0"
strsim = "0.11"
termimad = "0.34"
termios = "0.3" # not usable on windows!
thiserror = "2.0"
toml = { version = "1.1.2", features = ["preserve_order"] }
# probe-rs now uses tracing
tracing-subscriber = { version = "0.3.23", features = ["fmt", "env-filter"] }
trycmd = "0.13.2"
winapi = "0.3.9"
zerocopy = { version = "0.8", features = ["derive"] }
zip = "8.6.0"

[profile.release]
debug = true

[profile.ci]
inherits = "release"
debug = false
debug-assertions = true
