[package]
name = "humility-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
serde.workspace = true
parse_int.workspace = true
indexmap.workspace = true

humility.workspace = true
