[package]
name = "humility-cli"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
clap.workspace = true
indexmap.workspace = true
parse_int.workspace = true
serde.workspace = true
serde_json.workspace = true

humility-net-core.workspace = true
humility-probes-core = { workspace = true, optional = true }
humility.workspace = true
hubtools.workspace = true

[features]
default = ["probes"]
probes = ["humility-probes-core"]
