[package]
name = "humility-cmd"
version = "0.1.0"
edition = "2021"

[dependencies]
humility = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
hif = { workspace = true }
idol = { workspace = true }
indexmap = { workspace = true }
postcard = { workspace = true }
parse_int = { workspace = true }
ssmarshal = { workspace = true }
colored = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
zerocopy = { workspace = true }
