[package]
name = "humility-cmd"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
clap.workspace = true
colored.workspace = true
hif.workspace = true
hubpack.workspace = true
humility.workspace = true
idol.workspace = true
indexmap.workspace = true
lazy_static.workspace = true
log.workspace = true
parse_int.workspace = true
postcard.workspace = true
serde.workspace = true
serde_json.workspace = true
zerocopy.workspace = true
