[package]
name = "humility-cmd"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true

humility.workspace = true
humility-net-core.workspace = true
humility-cli.workspace = true

humility-probes-core = { workspace = true, optional = true }

[features]
default = ["probes"]
probes = ["humility-probes-core"]
